unpackaged/main/default/objects/ICS_Approver_Matrix__c/ICS_Approver_Matrix__c.object-meta.xml
<CustomObject>
    <label>ICS Approver Matrix</label>
    <nameField>
        <displayFormat>ICS_AM-{00000}</displayFormat>
        <label>ICS Approver Matrix N0</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICS Approver Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>