unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/Additional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>ICS Approver Matrix (Additional Approver)</relationshipLabel>
    <relationshipName>ICS_Approver_Matrix4</relationshipName>
    <type>Lookup</type>
</CustomField>