unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/AR1_Approver__c.field-meta.xml
<CustomField>
    <fullName>AR1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR1 Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>ICS Approver Matrix (AR1 Approver)</relationshipLabel>
    <relationshipName>ICS_Approver_Matrix2</relationshipName>
    <type>Lookup</type>
</CustomField>