unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/AR2_Approver__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR2 Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>ICS Approver Matrix (AR2 Approver)</relationshipLabel>
    <relationshipName>ICS_Approver_Matrix3</relationshipName>
    <type>Lookup</type>
</CustomField>