unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/CSO_Approver__c.field-meta.xml
<CustomField>
    <fullName>CSO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>ICS Approver Matrix (CSO Approver)</relationshipLabel>
    <relationshipName>ICS_Approver_Matrix5</relationshipName>
    <type>Lookup</type>
</CustomField>