unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/F_R_Approver__c.field-meta.xml
<CustomField>
    <fullName>F_R_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F&amp;R Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>ICS Approver Matrix (F&amp;R Approver)</relationshipLabel>
    <relationshipName>ICS_Approver_Matrix1</relationshipName>
    <type>Lookup</type>
</CustomField>