unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/LOB_Approver__c.field-meta.xml
<CustomField>
    <fullName>LOB_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOB Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>ICS Approver Matrix</relationshipLabel>
    <relationshipName>ICS_Approver_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>