unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/Reason_Code_Category__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Category__c</fullName>
    <label>Reason Code Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat - A</fullName>
            </value>
            <value>
                <fullName>Cat - B</fullName>
            </value>
            <value>
                <fullName>Cat - C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>