unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E&amp;E (Trade Show)</fullName>
            </value>
            <value>
                <fullName>E&amp;E Logistics (Trade Show)</fullName>
            </value>
            <value>
                <fullName>E&amp;E(GBMS)</fullName>
            </value>
            <value>
                <fullName>Revenue Exhibitor</fullName>
            </value>
            <value>
                <fullName>Revenue Logistics</fullName>
            </value>
            <value>
                <fullName>Revenue Show Org</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Revenue Trade Show &amp; Logistics</fullName>
                <isActive>false</isActive>
                <label>Revenue Trade Show &amp; Logistics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>