unpackaged/main/default/objects/ICS_Approver_Matrix__c/fields/Transaction_Types__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Types__c</fullName>
    <label>Transaction Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR Adjustments</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Payment Transfer</fullName>
            </value>
            <value>
                <fullName>Receipt Reversals</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>